--- a/test_plan.yml
+++ b/test_plan.yml
@@ -1,13 +1,10 @@
-master_host: http://52.26.206.94:9090/
-dir : 20180131
+master_host: http://localhost:8089/
+dir : 20180305
 plan : [
-        {'locust_count': 10, 'hatch_rate': 1},
-        {'locust_count': 30, 'hatch_rate': 1},
-        {'locust_count': 50, 'hatch_rate': 1},
-        {'locust_count': 70, 'hatch_rate': 1},
-        {'locust_count': 90, 'hatch_rate': 1},
-        {'locust_count': 100, 'hatch_rate': 1},
-        {'locust_count': 120, 'hatch_rate': 1},
+#        {'locust_count': 10, 'hatch_rate': 5},
+        {'locust_count': 50, 'hatch_rate': 10},
+        {'locust_count': 80, 'hatch_rate': 10},
+        {'locust_count': 100, 'hatch_rate': 10},
         ]
 #时间单位S
-duration : 60
+duration : 180
