--- a/test_plan.yml
+++ b/test_plan.yml
@@ -1,11 +1,9 @@
-master_host: http://52.26.206.94:9090/
-dir : 20180308
+master_host: http://0.0.0.0:9090/
+dir : 20180723US_est
 plan : [
-#        {'locust_count': 10, 'hatch_rate': 5},
-        {'locust_count': 50, 'hatch_rate': 10},
-        {'locust_count': 80, 'hatch_rate': 10},
-        {'locust_count': 100, 'hatch_rate': 10},
-        {'locust_count': 150, 'hatch_rate': 10}
+        {'locust_count': 500, 'hatch_rate': 50},
+        {'locust_count': 1000, 'hatch_rate': 50},
+        {'locust_count': 1500, 'hatch_rate': 50},
         ]
 #时间单位S
-duration : 180
+duration : 60
