--- a/test_plan.yml
+++ b/test_plan.yml
@@ -2,11 +2,12 @@ master_host: http://18.217.11.105:8089/
 dir: wuren_login_201812-8_0
 plan: [
 {'locust_count': 500, 'hatch_rate': 50},
+{'locust_count': 800, 'hatch_rate': 50},
 {'locust_count': 1000, 'hatch_rate': 50},
-{'locust_count': 1500, 'hatch_rate': 50},
-{'locust_count': 2000, 'hatch_rate': 50},
-{'locust_count': 2000, 'hatch_rate': 50},
-{'locust_count': 2500, 'hatch_rate': 50}
+  #{'locust_count': 1500, 'hatch_rate': 50},
+  #{'locust_count': 2000, 'hatch_rate': 50},
+  #{'locust_count': 2000, 'hatch_rate': 50},
+  #{'locust_count': 2500, 'hatch_rate': 50}
   #  {'locust_count': 500, 'hatch_rate': 50},
   #  {'locust_count': 700, 'hatch_rate': 50},
   #  {'locust_count': 850, 'hatch_rate': 50}
