--- a/test_plan.yml
+++ b/test_plan.yml
@@ -1,17 +1,20 @@
-master_host: http://18.217.11.105:8089/
-dir: wuren_create_home_201812-8_0
+#master_host: http://18.217.11.105:8089/
+master_host: http://0.0.0.0:8089/
+dir: test
+host_name: wuren-backend-burger-web1
 plan: [
 {'locust_count': 300, 'hatch_rate': 50},
 {'locust_count': 500, 'hatch_rate': 50},
-{'locust_count': 650, 'hatch_rate': 50},
-#{'locust_count': 1000, 'hatch_rate': 50},
-#  {'locust_count': 1400, 'hatch_rate': 50},
+  #{'locust_count': 650, 'hatch_rate': 50},
+  #{'locust_count': 1000, 'hatch_rate': 50},
+  #{'locust_count': 1400, 'hatch_rate': 50},
   #{'locust_count': 2000, 'hatch_rate': 50},
   #{'locust_count': 2000, 'hatch_rate': 50},
   #{'locust_count': 2500, 'hatch_rate': 50}
-  #  {'locust_count': 500, 'hatch_rate': 50},
-  #  {'locust_count': 700, 'hatch_rate': 50},
-  #  {'locust_count': 850, 'hatch_rate': 50}
+  #{'locust_count': 500, 'hatch_rate': 50},
+  #{'locust_count': 700, 'hatch_rate': 50},
+  #{'locust_count': 850, 'hatch_rate': 50}
 ]
 #时间单位S
-duration: 60
+#少于180使用180
+duration: 180
