--- a/test_plan.yml
+++ b/test_plan.yml
@@ -8,10 +8,11 @@ plan: [
 #  {'locust_count': 150, 'hatch_rate': 20},
 #  {'locust_count': 200, 'hatch_rate': 20},
 {'locust_count': 650, 'hatch_rate': 50},
+{'locust_count': 700, 'hatch_rate': 50},
+{'locust_count': 750, 'hatch_rate': 50},
 {'locust_count': 800, 'hatch_rate': 50},
-{'locust_count': 1000, 'hatch_rate': 50},
-{'locust_count': 1200, 'hatch_rate': 50},
-{'locust_count': 1500, 'hatch_rate': 50},
+#{'locust_count': 1200, 'hatch_rate': 50},
+#{'locust_count': 1500, 'hatch_rate': 50},
   #  {'locust_count': 2000, 'hatch_rate': 50},
   #  {'locust_count': 2500, 'hatch_rate': 50}
   #{'locust_count': 500, 'hatch_rate': 50},
