--- a/test_plan.yml
+++ b/test_plan.yml
@@ -12,8 +12,8 @@ plan: [
 {'locust_count': 800, 'hatch_rate': 50},
 {'locust_count': 900, 'hatch_rate': 50},
 {'locust_count': 1000, 'hatch_rate': 50},
-#{'locust_count': 1200, 'hatch_rate': 50},
-#{'locust_count': 1500, 'hatch_rate': 50},
+{'locust_count': 1200, 'hatch_rate': 50},
+{'locust_count': 1500, 'hatch_rate': 50},
 #{'locust_count': 1700 , 'hatch_rate': 50},
 #{'locust_count': 1800 , 'hatch_rate': 50},
 #{'locust_count': 1900 , 'hatch_rate': 50},
